Fix: long vertical content was cutting off

--- a/css/scss/beta/_m-masthead.scss
+++ b/css/scss/beta/_m-masthead.scss
@@ -191,7 +191,7 @@ input#m-q {
   @include transition(all 1s);   
 
   &.active {
-    max-height: 500px;
+    max-height: 700px;
   }
 }
 
